--- a/Notebooks/SacarMúsica/Metricas.ipynb
+++ b/Notebooks/SacarMúsica/Metricas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Metricas.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPlEgsQkEDphHIqqoZfDXMV",
+      "authorship_tag": "ABX9TyOQq3/rPJuan5DUT2emBnsM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,6 +80,7 @@
       },
       "source": [
         "import glob\n",
+        "import statistics as stats\n",
         "import shutil\n",
         "import operator\n",
         "import sys\n",
@@ -99,7 +100,7 @@
         "import torch\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 2,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -148,7 +149,7 @@
         "    assert iou <= 1.0\n",
         "    return iou"
       ],
-      "execution_count": 32,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -190,7 +191,7 @@
         "      s.append(scores[i])\n",
         "  return b,l,s"
       ],
-      "execution_count": 33,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -241,7 +242,7 @@
         "  \n",
         "  return remove_notas(L,labels,scores)"
       ],
-      "execution_count": 34,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1233,7 +1234,8 @@
         "id": "SdAAtYjzSvjV"
       },
       "source": [
-        "### Faster-CRNN"
+        "### Faster-CRNN\n",
+        "- Coco metric sacada de: https://github.com/joheras/MusicaCatedralStoDomingoIER/blob/main/Notebooks/SacarM%C3%BAsica/Training.ipynb"
       ]
     },
     {
@@ -1253,10 +1255,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "9IC_Pt0MUX2c",
-        "outputId": "4e706e4e-4c4c-4d50-c35a-9b34b0ef9eca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6932aa03-f7f2-49b1-a15d-751973ae110f"
       },
       "source": [
         "faster.load_state_dict(state_dict)"
@@ -1286,7 +1288,7 @@
         "path=Path('dataset/test')\n",
         "files = get_files(path, folders = ['images'])"
       ],
-      "execution_count": 37,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1306,22 +1308,22 @@
         "    txt.write(label + ' ' +str(conf) + ' '+ str(x) + ' ' + str(y) + ' '+ str(z) + ' '+ str(w) +'\\n')\n",
         "  txt.close()"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Tbu9LVqKcb4K",
-        "outputId": "380c2cbd-c505-4558-c7bb-31a8976e6386",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c0fd20d1-1e08-4e60-b939-a19e85a045b4"
       },
       "source": [
         "mAP()"
       ],
-      "execution_count": 44,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1368,20 +1370,62 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 19
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1WiXHGp-clKV"
+        "id": "17Qdabz-copH",
+        "outputId": "ecd2a329-b03e-4b00-cddc-d8b7406c5730",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "txt=open('/content/output/output.txt','r')\n",
+        "linea=txt.readline()\n",
+        "gt={}\n",
+        "dt={}\n",
+        "while linea!= '# Number of ground-truth objects per class\\n':\n",
+        "  linea=txt.readline()\n",
+        "  if 'mAP =' in linea: print(linea[:-1])\n",
+        "for i in range(0,28): # número de clases en test\n",
+        "  a = txt.readline().split()\n",
+        "  gt[a[0]]= a[1]    \n",
+        "txt.readline()\n",
+        "txt.readline()\n",
+        "a = txt.readline().split()\n",
+        "while a!= []:\n",
+        "  dt[a[0]]=a[1:]\n",
+        "  a = txt.readline().split()\n",
+        "\n",
+        "for key in gt.keys():\n",
+        "  if key not in dt.keys(): dt[key]=['0', '(tp:0,', 'fp:0)']\n",
+        "\n",
+        "precision= np.sum([float(dt[i][1][4:-1])/(float(dt[i][1][4:-1])+float(dt[i][2][3:-1])) for i in dt if dt[i][1][4:-1] != '0'])/28\n",
+        "print('precision: ',precision)\n",
+        "recall=stats.mean([float(dt[i][1][4:-1])/float(gt[i])  for i in dt])\n",
+        "print('recall: ',recall)\n",
+        "f1 = (2*precision*recall)/(precision+recall)\n",
+        "print('f1 score: ',recall)\n",
+        "print('coco metric: ',0.5935895458422508)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "mAP = 76.38%\n",
+            "precision:  0.709857650847785\n",
+            "recall:  0.7719123235093768\n",
+            "f1 score:  0.7719123235093768\n",
+            "coco metric:  0.5935895458422508\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
