--- a/Notebooks/SacarMúsica/Metricas.ipynb
+++ b/Notebooks/SacarMúsica/Metricas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Metricas.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOQq3/rPJuan5DUT2emBnsM",
+      "authorship_tag": "ABX9TyNWYL+ebpDiBNVnsIAQNEek",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1381,7 +1381,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "17Qdabz-copH",
-        "outputId": "ecd2a329-b03e-4b00-cddc-d8b7406c5730"
+        "outputId": "ba96f878-4858-4b9b-a7ad-1eec5ceb6964"
       },
       "source": [
         "txt=open('/content/output/output.txt','r')\n",
@@ -1409,10 +1409,10 @@
         "recall=stats.mean([float(dt[i][1][4:-1])/float(gt[i])  for i in dt])\n",
         "print('recall: ',recall)\n",
         "f1 = (2*precision*recall)/(precision+recall)\n",
-        "print('f1 score: ',recall)\n",
+        "print('f1 score: ',f1)\n",
         "print('coco metric: ',0.5935895458422508)"
       ],
-      "execution_count": 79,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
@@ -1420,12 +1420,51 @@
             "mAP = 76.38%\n",
             "precision:  0.709857650847785\n",
             "recall:  0.7719123235093768\n",
-            "f1 score:  0.7719123235093768\n",
+            "f1 score:  0.7395856011518098\n",
             "coco metric:  0.5935895458422508\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k7pkZTiVtBq1",
+        "outputId": "54b39394-6dc5-4f56-a23d-d8b40a332ffd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "(2*precision*recall)/(precision+recall)"
+      ],
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7395856011518098"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4c3qkGtytC3w"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
