--- a/Notebooks/SacarMúsica/Metricas.ipynb
+++ b/Notebooks/SacarMúsica/Metricas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Metricas.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNWYL+ebpDiBNVnsIAQNEek",
+      "authorship_tag": "ABX9TyP0isNMALDGEESGrnZs2B59",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,8 @@
       },
       "source": [
         "# Métricas\n",
-        "- En este cuaderno sacaremos diferentes métricas para los modelos de detección"
+        "- En este cuaderno sacaremos diferentes métricas para los modelos de detección\n",
+        "- Coco metric sacada de: https://github.com/joheras/MusicaCatedralStoDomingoIER/blob/main/Notebooks/SacarM%C3%BAsica/Training.ipynb"
       ]
     },
     {
@@ -100,7 +101,7 @@
         "import torch\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 21,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -131,10 +132,7 @@
       },
       "source": [
         "def get_iou(bb1, bb2):\n",
-        "    assert bb1[0] < bb1[2]\n",
-        "    assert bb1[1] < bb1[3]\n",
-        "    assert bb2[0] < bb2[2]\n",
-        "    assert bb2[1] < bb2[3]\n",
+        "    if bb1[0] < bb1[2] or bb1[1] < bb1[3] or bb2[0] < bb2[2] or bb2[1] < bb2[3]: return 0\n",
         "    x_left = max(bb1[0], bb2[0])\n",
         "    y_top = max(bb1[1], bb2[1])\n",
         "    x_right = min(bb1[2], bb2[2])\n",
@@ -145,11 +143,10 @@
         "    bb1_area = (bb1[2] - bb1[0]) * (bb1[3] - bb1[1])\n",
         "    bb2_area = (bb2[2] - bb2[0]) * (bb2[3] - bb2[1])\n",
         "    iou = intersection_area / float(bb1_area + bb2_area - intersection_area)\n",
-        "    assert iou >= 0.0\n",
-        "    assert iou <= 1.0\n",
-        "    return iou"
+        "    if 0.0 <= iou <= 1.0: return iou\n",
+        "    else: return 0"
       ],
-      "execution_count": 4,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -191,7 +188,7 @@
         "      s.append(scores[i])\n",
         "  return b,l,s"
       ],
-      "execution_count": 5,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -242,7 +239,7 @@
         "  \n",
         "  return remove_notas(L,labels,scores)"
       ],
-      "execution_count": 6,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -274,7 +271,7 @@
         "\n",
         "args = parser.parse_args()"
       ],
-      "execution_count": 7,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -534,7 +531,7 @@
         "    # close the plot\n",
         "    plt.close()"
       ],
-      "execution_count": 8,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -1162,7 +1159,7 @@
         "          )\n",
         "  return sum_AP*100"
       ],
-      "execution_count": 9,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -1184,7 +1181,7 @@
         "%mkdir 'input/ground-truth'\n",
         "%mkdir 'input/detection-results'"
       ],
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1196,7 +1193,7 @@
         "path=Path('dataset/test')\n",
         "files = get_files(path, folders = ['images'])"
       ],
-      "execution_count": 11,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1216,7 +1213,7 @@
         "    txt.write(label + ' ' + str(x) + ' ' + str(y) + ' '+ str(z) + ' '+ str(w) +'\\n')\n",
         "  txt.close()"
       ],
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1234,8 +1231,7 @@
         "id": "SdAAtYjzSvjV"
       },
       "source": [
-        "### Faster-CRNN\n",
-        "- Coco metric sacada de: https://github.com/joheras/MusicaCatedralStoDomingoIER/blob/main/Notebooks/SacarM%C3%BAsica/Training.ipynb"
+        "### Faster-CRNN"
       ]
     },
     {
@@ -1248,7 +1244,7 @@
         "state_dict = torch.load('faster.pth')\n",
         "faster = faster_rcnn.model(num_classes=35)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1263,7 +1259,7 @@
       "source": [
         "faster.load_state_dict(state_dict)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1288,7 +1284,7 @@
         "path=Path('dataset/test')\n",
         "files = get_files(path, folders = ['images'])"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1308,7 +1304,7 @@
         "    txt.write(label + ' ' +str(conf) + ' '+ str(x) + ' ' + str(y) + ' '+ str(z) + ' '+ str(w) +'\\n')\n",
         "  txt.close()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1323,7 +1319,7 @@
       "source": [
         "mAP()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1412,7 +1408,7 @@
         "print('f1 score: ',f1)\n",
         "print('coco metric: ',0.5935895458422508)"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1428,43 +1424,238 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "k7pkZTiVtBq1",
-        "outputId": "54b39394-6dc5-4f56-a23d-d8b40a332ffd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "-MJebaOyMZnJ"
       },
       "source": [
-        "(2*precision*recall)/(precision+recall)"
+        "### EffecientDet"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OlnTGg2ON5B6"
+      },
+      "source": [
+        "def pent_image2pred(test,detector):\n",
+        "  if type(test) == str:\n",
+        "    test = cv2.imread(test)\n",
+        "  Y,X,_=test.shape\n",
+        "  infer_tfms = tfms.A.Adapter([*tfms.A.resize_and_pad(size=512), tfms.A.Normalize()])\n",
+        "  infer_ds = Dataset.from_images([test], infer_tfms)\n",
+        "  infer_dl = efficientdet.infer_dl(infer_ds, batch_size=1)\n",
+        "  samples, preds = efficientdet.predict_dl(model=detector, infer_dl=infer_dl)\n",
+        "  L = []\n",
+        "  labels = list(preds[0]['labels'])\n",
+        "  bboxs = preds[0]['bboxes']\n",
+        "  for i in range(0,len(labels)):\n",
+        "    xmin=bboxs[i].xmin\n",
+        "    ymin=bboxs[i].ymin-(samples[0]['img'].shape[0]-samples[0]['height'])/2\n",
+        "    xmax=bboxs[i].xmax\n",
+        "    ymax=bboxs[i].ymax-(samples[0]['img'].shape[0]-samples[0]['height'])/2\n",
+        "    xmin=int(X*xmin/samples[0]['width'])\n",
+        "    ymin=int(Y*ymin/samples[0]['height'])\n",
+        "    xmax=int(X*xmax/samples[0]['width'])\n",
+        "    ymax=int(Y*ymax/samples[0]['height'])\n",
+        "    L.append([xmin,ymin,xmax,ymax])\n",
+        "  scores = [int(s) for s in 100*preds[0]['scores']]\n",
+        "  L,labels,scores = qsort(L,labels,scores)\n",
+        "  labels = [d[l] for l in labels]\n",
+        "  \n",
+        "  return remove_notas(L,labels,scores)"
       ],
-      "execution_count": 82,
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J-o8V1FuM_xL"
+      },
+      "source": [
+        "%%capture\n",
+        "state_dict = torch.load('efficientdet.pth')\n",
+        "efficent = efficientdet.model(model_name=\"tf_efficientdet_d3\", num_classes=35, img_size=512)"
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xB4AM9ZDM_xO",
+        "outputId": "87756ac6-ff7f-4830-adf2-3ec783c5b186"
+      },
+      "source": [
+        "efficent.load_state_dict(state_dict)"
+      ],
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7395856011518098"
+              "<All keys matched successfully>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 82
+          "execution_count": 39
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4c3qkGtytC3w"
+        "id": "LN9Esf4TM_xQ"
       },
       "source": [
-        ""
+        "path=Path('dataset/test')\n",
+        "files = get_files(path, folders = ['images'])"
       ],
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tDCe4p8UM_xR"
+      },
+      "source": [
+        "%%capture\n",
+        "for f in files:\n",
+        "  bboxs,labels,confs = pent_image2pred(str(f),detector=efficent)\n",
+        "  txt=open('input/detection-results/'+f.stem+'.txt','w')\n",
+        "  for i in range(0,len(labels)):\n",
+        "    label = labels[i]\n",
+        "    x,y,z,w = bboxs[i]\n",
+        "    conf=confs[i]\n",
+        "    txt.write(label + ' ' +str(conf) + ' '+ str(x) + ' ' + str(y) + ' '+ str(z) + ' '+ str(w) +'\\n')\n",
+        "  txt.close()"
+      ],
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nnap16u-M_xR",
+        "outputId": "234ec41a-d861-4da6-90ab-f086a5a36c4b"
+      },
+      "source": [
+        "mAP()"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.00% = 2x4 AP \n",
+            "0.00% = 3 AP \n",
+            "0.00% = 3x2 AP \n",
+            "33.33% = 3x4 AP \n",
+            "62.24% = 4x4 AP \n",
+            "0.00% = 6x8 AP \n",
+            "0.00% = P1 AP \n",
+            "0.00% = bec AP \n",
+            "67.94% = bem AP \n",
+            "0.00% = check AP \n",
+            "100.00% = claved AP \n",
+            "0.00% = clavef AP \n",
+            "100.00% = claves AP \n",
+            "0.00% = liga AP \n",
+            "0.00% = line AP \n",
+            "0.00% = nota1 AP \n",
+            "0.00% = nota1:2 AP \n",
+            "0.00% = nota1:4 AP \n",
+            "0.00% = nota2 AP \n",
+            "0.00% = nota4 AP \n",
+            "0.00% = notae AP \n",
+            "0.00% = punt AP \n",
+            "0.00% = sil0 AP \n",
+            "0.00% = sil1 AP \n",
+            "0.00% = sil1:2 AP \n",
+            "0.00% = sil1:4 AP \n",
+            "0.00% = sil2 AP \n",
+            "24.52% = sos AP \n",
+            "mAP = 13.86%\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "388.04431902427297"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tRx7C62PM_xS",
+        "outputId": "214fe01c-1839-4885-abf7-5d29848ef07c"
+      },
+      "source": [
+        "txt=open('/content/output/output.txt','r')\n",
+        "linea=txt.readline()\n",
+        "gt={}\n",
+        "dt={}\n",
+        "while linea!= '# Number of ground-truth objects per class\\n':\n",
+        "  linea=txt.readline()\n",
+        "  if 'mAP =' in linea: print(linea[:-1])\n",
+        "for i in range(0,28): # número de clases en test\n",
+        "  a = txt.readline().split()\n",
+        "  gt[a[0]]= a[1]    \n",
+        "txt.readline()\n",
+        "txt.readline()\n",
+        "a = txt.readline().split()\n",
+        "while a!= []:\n",
+        "  dt[a[0]]=a[1:]\n",
+        "  a = txt.readline().split()\n",
+        "\n",
+        "for key in gt.keys():\n",
+        "  if key not in dt.keys(): dt[key]=['0', '(tp:0,', 'fp:0)']\n",
+        "\n",
+        "precision= np.sum([float(dt[i][1][4:-1])/(float(dt[i][1][4:-1])+float(dt[i][2][3:-1])) for i in dt if dt[i][1][4:-1] != '0'])/28\n",
+        "print('precision: ',precision)\n",
+        "recall=stats.mean([float(dt[i][1][4:-1])/float(gt[i])  for i in dt])\n",
+        "print('recall: ',recall)\n",
+        "f1 = (2*precision*recall)/(precision+recall)\n",
+        "print('f1 score: ',f1)\n",
+        "print('coco metric: ',0.1556851971563123)"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "mAP = 13.86%\n",
+            "precision:  0.18804885590599876\n",
+            "recall:  0.14217577353522054\n",
+            "f1 score:  0.16192609010472164\n",
+            "coco metric:  0.1556851971563123\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
