--- a/Notebooks/SacarMúsica/YOLO.ipynb
+++ b/Notebooks/SacarMúsica/YOLO.ipynb
@@ -17,6 +17,246 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iZsNsoii9Pab"
+      },
+      "source": [
+        "# Creando estructura YOLO"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wLypgpRR__KM"
+      },
+      "source": [
+        "def convert_yolo(box, size=(117, 926)):\n",
+        "    dw = 1./size[1]\n",
+        "    dh = 1./size[0]\n",
+        "    x = (box[0] + box[2])/2.0\n",
+        "    y = (box[1] + box[3])/2.0\n",
+        "    w = box[2] - box[0]\n",
+        "    h = box[3] - box[1]\n",
+        "    x = x*dw\n",
+        "    w = w*dw\n",
+        "    y = y*dh\n",
+        "    h = h*dh\n",
+        "    return (x,y,w,h)"
+      ],
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "acedWJvp-MaT"
+      },
+      "source": [
+        "import os,shutil\n",
+        "import json\n",
+        "from pathlib import Path\n",
+        "import cv2"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d5zE1aHW9WKo",
+        "outputId": "c50a0d7a-bd90-4643-b952-4c2655445ada",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6xpdFBPa9in6"
+      },
+      "source": [
+        "%%capture\n",
+        "!unzip /content/drive/MyDrive/DatasetMusica/dataset.zip"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zjjHHFkM-NSi"
+      },
+      "source": [
+        "%mkdir datasetYOLO\n",
+        "%mkdir datasetYOLO/train\n",
+        "%mkdir datasetYOLO/test"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sjgNq-eT_BrN"
+      },
+      "source": [
+        "- Creando las imágenes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4Ss4LscD-bE-"
+      },
+      "source": [
+        "carpetas=['train/','test/']\n",
+        "path_o='dataset/'\n",
+        "path_t='datasetYOLO/'\n",
+        "for dir in carpetas:\n",
+        "  for file in os.listdir(path_o+dir+'images'):\n",
+        "    original = path_o+dir\n",
+        "    target = path_t+dir\n",
+        "    stem=Path(file).stem\n",
+        "    shutil.move(original+'images/'+file,target+file)\n",
+        "    shutil.move(original+'yolo/'+stem+'.txt',target+stem+'.txt')"
+      ],
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "afYJjH9W_FFB"
+      },
+      "source": [
+        "- Creando las anotaciones"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jHYEvNog_GkZ"
+      },
+      "source": [
+        "d={'background':0,'claved':1, 'claves':2, 'clavef':3, 'nota1':4, 'nota2':5, 'nota4':6, 'nota1:2':7, 'nota1:4':8, 'notae':9, 'sos':10, 'bem':11, 'bec':12, 'sil0':13, 'sil1':14, 'sil2':15, 'sil1:2':16, 'sil1:4':17, '2x4':18, '3x4':19, '4x4':20, '6x8':21, 'punt':22, 'liga':23,'3':24,'line':25,'P2':26, 'nota1:8':27, 'cal':28, '3x2':29,'mf':30,'P1':31,'check':32,'3x8':33,'2x2':34}\n",
+        "carpetas=['train/','test/']\n",
+        "path_o='dataset/'\n",
+        "path_t='datasetYOLO/'\n",
+        "for dir in carpetas:\n",
+        "  for file in os.listdir(path_o+dir+'annotations'):\n",
+        "    original = path_o+dir\n",
+        "    target = path_t+dir\n",
+        "    a = json.load(open(original+'annotations/'+file))\n",
+        "    b = open(target+file[:-4]+'txt','w')\n",
+        "    for coords in a:\n",
+        "      x,y,w,h = convert_yolo(coords['box'])\n",
+        "      label = d[coords['label']]\n",
+        "      b.write(str(label) + ' ' + str(x) + ' ' + str(y) + ' ' + str(w) + ' ' + str(h) + '\\n')\n",
+        "    b.close()"
+      ],
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "idZ0med7FiZe"
+      },
+      "source": [
+        "- Creando el train.txt y test.txt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ojYfwjZiFkZZ"
+      },
+      "source": [
+        "image_files = []\n",
+        "os.chdir(os.path.join(\"datasetYOLO\",\"test\"))\n",
+        "for filename in os.listdir(os.getcwd()):\n",
+        "    if filename.endswith(\".jpg\"):\n",
+        "        image_files.append(\"datasetYOLO/test/\" + filename)\n",
+        "os.chdir(\"..\")\n",
+        "with open(\"test.txt\", \"w\") as outfile:\n",
+        "    for image in image_files:\n",
+        "        outfile.write(image)\n",
+        "        outfile.write(\"\\n\")\n",
+        "    outfile.close()\n",
+        "os.chdir(\"..\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V4jFb1ckFo7i"
+      },
+      "source": [
+        "image_files = []\n",
+        "os.chdir(os.path.join(\"datasetYOLO\",\"train\"))\n",
+        "for filename in os.listdir(os.getcwd()):\n",
+        "    if filename.endswith(\".jpg\"):\n",
+        "        image_files.append(\"datasetYOLO/train/\" + filename)\n",
+        "os.chdir(\"..\")\n",
+        "with open(\"train.txt\", \"w\") as outfile:\n",
+        "    for image in image_files:\n",
+        "        outfile.write(image)\n",
+        "        outfile.write(\"\\n\")\n",
+        "    outfile.close()\n",
+        "os.chdir(\"..\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pcBaZfLnFpox"
+      },
+      "source": [
+        "- Guardando en drive"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pk6Y4ZIdFsMd"
+      },
+      "source": [
+        "import shutil\n",
+        "shutil.make_archive('/content/drive/MyDrive/DatasetMusica/datasetYOLO','zip','/content/datasetYOLO')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tL9jYKjY9LUT"
+      },
+      "source": [
+        "# Entrenando "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "NrddppJlnbE5"
